# tstorage-rs

./: Cargo.toml  README.md
benches/: insert.rs
examples/: simple.rs
src/: csv.rs  disk_partition.rs  encode.rs  lib.rs  main.rs  metric.rs  partition.rs  storage.rs  window.rs
src/encode/: csv.rs  encode.rs  gorilla.rs  mod.rs
src/encode/test/: fake_file.rs  mod.rs
src/partition/: disk.rs  memory.rs  mod.rs
tests/fixtures/test_csv_disk_partition/: data  meta.json
tests/fixtures/test_open_existing_partitions/p-10-110/: meta.json
tests/fixtures/test_open_existing_partitions/p-110-210/: data  meta.json
