[package]
name = "rstorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.24", features = ["serde"] }
criterion = "0.4.0"
dashmap = "5.4.0"
memmap = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.40"

[[bench]]
name = "insert"
harness = false
