[package]
name = "tstorage"
version = "0.1.0"
authors = ["Daniel Gil <daniel.patrick.gil@gmail.com>"]
description = "Embedded time-series database"
edition = "2021"
keywords = ["timeseries", "database"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dpgil/tstorage-rs"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.24", features = ["serde"] }
criterion = "0.4.0"
dashmap = "5.4.0"
log = "0.4.17"
memmap = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.40"
tsz = "0.1.4"

[[bench]]
name = "insert"
harness = false
